--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "3\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "print(3)"
+    "print(3)\n",
+    "print(5)"
    ]
   },
   {
