--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,15 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "5\n"
+      "5\n",
+      "7\n"
      ]
     }
    ],
    "source": [
     "print(3)\n",
-    "print(5)"
+    "print(5)\n",
+    "print(7)"
    ]
   },
   {
