--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16,9 +16,7 @@
     }
    ],
    "source": [
-    "print(3)\n",
-    "print(5)\n",
-    "print(7)"
+    "print(\"is this working?\")"
    ]
   },
   {
